# pubg-gun-control

./: 1.2.2-2024.5.20.-GHUB.-github.lua  README-EN.md  README.md  config.json  main.py  main_editor.py  pubg_gun_control.spec  pyproject.toml
.github/workflows/: build.yml
.trae/specs/ballistic-editor/: checklist.md  spec.md  tasks.md
src/pubg_gun_control/: __init__.py  ballistic_data.py  config_manager.py  input_listener.py  lua_parser.py  overlay_window.py  preset_manager.py  settings_window.py  tray_icon.py  voice_prompt.py
src/pubg_gun_control/editor_ui/: __init__.py  attachment_panel.py  gun_detail_panel.py  gun_list_panel.py  main_window.py  preset_dialog.py  trajectory_view.py
test/: test_editor_integration.py  test_lua_parser.py  test_voice_prompt.py
