[project]
name = "pubg-gun-control"
version = "1.1.3"
description = "PUBG枪械切换显示工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "pillow>=12.1.1",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
    "PySide6>=6.6.0",
    "matplotlib>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pubg_gun_control"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
